concord_macros/tests/trybuild/fail/parser/fmt/fmt_secret_in_path.stderr
error: secret.* is not allowed in fmt[...]
  --> tests/trybuild/fail/parser/fmt/fmt_secret_in_path.rs:11:34
   |
11 |         path [fmt["key-", secret.api_key]]
   |                                  ^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/trybuild/fail/parser/fmt/fmt_secret_in_path.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
